{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 37,
  "lineage": "e526bf7b-e485-3181-2f38-92f69983049b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588738594982:vpc/vpc-0127baf0e67cb1904",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07cdf1d590bb52504",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0fd495f77aa001103",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0127baf0e67cb1904",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c7a09f633deb8c96",
            "owner_id": "588738594982",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07216ac99dc46a187",
            "arn": "arn:aws:ec2:ap-south-1:588738594982:instance/i-045caf5e1a57941f3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-control-plane-profile-dev",
            "id": "i-045caf5e1a57941f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0971be66f90b2fdd8"
              }
            ],
            "primary_network_interface_id": "eni-0971be66f90b2fdd8",
            "private_dns": "ip-172-31-10-240.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.10.240",
            "public_dns": "ec2-65-2-153-231.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.153.231",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "k8s-control-plane-root-dev"
                },
                "tags_all": {
                  "Name": "k8s-control-plane-root-dev"
                },
                "throughput": 0,
                "volume_id": "vol-02619b172f5f9dfd4",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "k8s-control-plane-dev"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085be1920125ae377",
            "tags": {
              "Env": "dev",
              "Name": "k8s-control-plane-dev",
              "Role": "control-plane"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "k8s-control-plane-dev",
              "Role": "control-plane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2573c8b70a05bf9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "588738594982",
            "id": "i-045caf5e1a57941f3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu_22_04",
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2.aws_iam_instance_profile.control_plane",
            "module.ec2.aws_iam_role.control_plane",
            "module.ec2.aws_key_pair.dev-key",
            "module.security_groups.aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07216ac99dc46a187",
            "arn": "arn:aws:ec2:ap-south-1:588738594982:instance/i-0f1877fbb468054d0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-worker-profile-dev",
            "id": "i-0f1877fbb468054d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0974de6f7141bf24d"
              }
            ],
            "primary_network_interface_id": "eni-0974de6f7141bf24d",
            "private_dns": "ip-172-31-11-126.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.126",
            "public_dns": "ec2-13-203-104-186.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.104.186",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "k8s-worker-1-root-dev"
                },
                "tags_all": {
                  "Name": "k8s-worker-1-root-dev"
                },
                "throughput": 0,
                "volume_id": "vol-071a67f421802e9f2",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "k8s-worker-dev"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085be1920125ae377",
            "tags": {
              "Env": "dev",
              "Name": "k8s-worker-1-dev",
              "Role": "worker"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "k8s-worker-1-dev",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05552253dfe55af7e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "588738594982",
            "id": "i-0f1877fbb468054d0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu_22_04",
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2.aws_iam_instance_profile.worker",
            "module.ec2.aws_iam_role.worker",
            "module.ec2.aws_key_pair.dev-key",
            "module.security_groups.aws_security_group.worker"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07216ac99dc46a187",
            "arn": "arn:aws:ec2:ap-south-1:588738594982:instance/i-01aedb0aab11d01e3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-worker-profile-dev",
            "id": "i-01aedb0aab11d01e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b2c1de2f6f3c439c"
              }
            ],
            "primary_network_interface_id": "eni-0b2c1de2f6f3c439c",
            "private_dns": "ip-172-31-23-211.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.211",
            "public_dns": "ec2-13-203-25-134.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.25.134",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "k8s-worker-2-root-dev"
                },
                "tags_all": {
                  "Name": "k8s-worker-2-root-dev"
                },
                "throughput": 0,
                "volume_id": "vol-0ff16254e61229d4c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "k8s-worker-dev"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0410e13e8c69c2d14",
            "tags": {
              "Env": "dev",
              "Name": "k8s-worker-2-dev",
              "Role": "worker"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "k8s-worker-2-dev",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05552253dfe55af7e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "588738594982",
            "id": "i-01aedb0aab11d01e3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu_22_04",
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2.aws_iam_instance_profile.worker",
            "module.ec2.aws_iam_role.worker",
            "module.ec2.aws_key_pair.dev-key",
            "module.security_groups.aws_security_group.worker"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07216ac99dc46a187",
            "arn": "arn:aws:ec2:ap-south-1:588738594982:instance/i-0f90332d6e0b4caa5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-worker-profile-dev",
            "id": "i-0f90332d6e0b4caa5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a7ac7b038d44ff8a"
              }
            ],
            "primary_network_interface_id": "eni-0a7ac7b038d44ff8a",
            "private_dns": "ip-172-31-47-198.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.198",
            "public_dns": "ec2-13-201-72-241.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.72.241",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "k8s-worker-3-root-dev"
                },
                "tags_all": {
                  "Name": "k8s-worker-3-root-dev"
                },
                "throughput": 0,
                "volume_id": "vol-0f3dc43dcb3bc2fa8",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "k8s-worker-dev"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c21d04e7f93a417b",
            "tags": {
              "Env": "dev",
              "Name": "k8s-worker-3-dev",
              "Role": "worker"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "k8s-worker-3-dev",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05552253dfe55af7e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "588738594982",
            "id": "i-0f90332d6e0b4caa5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu_22_04",
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.ec2.aws_iam_instance_profile.worker",
            "module.ec2.aws_iam_role.worker",
            "module.ec2.aws_key_pair.dev-key",
            "module.security_groups.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588738594982:security-group/sg-0d2573c8b70a05bf9",
            "description": "Security group for Kubernetes control plane nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2573c8b70a05bf9",
            "ingress": [],
            "name": "k8s-control-plane-dev",
            "name_prefix": "",
            "owner_id": "588738594982",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "k8s-control-plane-sg-dev",
              "Role": "control-plane"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "k8s-control-plane-sg-dev",
              "Role": "control-plane"
            },
            "timeouts": null,
            "vpc_id": "vpc-0127baf0e67cb1904"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "588738594982",
            "id": "sg-0d2573c8b70a05bf9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:588738594982:security-group/sg-05552253dfe55af7e",
            "description": "Security group for Kubernetes worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05552253dfe55af7e",
            "ingress": [],
            "name": "k8s-worker-dev",
            "name_prefix": "",
            "owner_id": "588738594982",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "k8s-worker-sg-dev",
              "Role": "worker"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "k8s-worker-sg-dev",
              "Role": "worker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0127baf0e67cb1904"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "588738594982",
            "id": "sg-05552253dfe55af7e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Kubernetes API Server",
            "from_port": 6443,
            "id": "sgrule-2533195821",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0d2573c8b70a05bf9",
            "security_group_rule_id": "sgr-0a82b8972e476e8f2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_groups.aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_controller_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "kube-controller-manager",
            "from_port": 10257,
            "id": "sgrule-723522282",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0d2573c8b70a05bf9",
            "security_group_rule_id": "sgr-01b7b3a3046703786",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_groups.aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_etcd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "etcd server client API (self)",
            "from_port": 2379,
            "id": "sgrule-436097937",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0d2573c8b70a05bf9",
            "security_group_rule_id": "sgr-09874a522e0349ec1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_groups.aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_from_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow all traffic from worker nodes",
            "from_port": 0,
            "id": "sgrule-2302460375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-0d2573c8b70a05bf9",
            "security_group_rule_id": "sgr-02ebeaa54dbef2e8f",
            "self": false,
            "source_security_group_id": "sg-05552253dfe55af7e",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_groups.aws_security_group.control_plane",
            "module.security_groups.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Kubelet API",
            "from_port": 10250,
            "id": "sgrule-2799608715",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0d2573c8b70a05bf9",
            "security_group_rule_id": "sgr-0db9e50e25c38c65c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_groups.aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_scheduler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "kube-scheduler",
            "from_port": 10259,
            "id": "sgrule-3953948265",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0d2573c8b70a05bf9",
            "security_group_rule_id": "sgr-028dc13066db99455",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_groups.aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cp_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1387803241",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0d2573c8b70a05bf9",
            "security_group_rule_id": "sgr-0de24cb41e06a8515",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_groups.aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_cni_bgp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Calico BGP",
            "from_port": 179,
            "id": "sgrule-3284162752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-05552253dfe55af7e",
            "security_group_rule_id": "sgr-0014eb5875e2c0302",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 179,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_groups.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_cni_vxlan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "CNI VXLAN overlay (Flannel/Calico)",
            "from_port": 8472,
            "id": "sgrule-1280390669",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "ap-south-1",
            "security_group_id": "sg-05552253dfe55af7e",
            "security_group_rule_id": "sgr-01ffbe91591ba4229",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8472,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_groups.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_from_cp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow all traffic from control plane",
            "from_port": 0,
            "id": "sgrule-949732842",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-05552253dfe55af7e",
            "security_group_rule_id": "sgr-09f8f69690f465db9",
            "self": false,
            "source_security_group_id": "sg-0d2573c8b70a05bf9",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_groups.aws_security_group.control_plane",
            "module.security_groups.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Kubelet API",
            "from_port": 10250,
            "id": "sgrule-3826466043",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-05552253dfe55af7e",
            "security_group_rule_id": "sgr-092c50dddc4b9c58c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_groups.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "NodePort Services",
            "from_port": 30000,
            "id": "sgrule-2623119010",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-05552253dfe55af7e",
            "security_group_rule_id": "sgr-0aede69ac96f3a25f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_groups.aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2072422085",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-05552253dfe55af7e",
            "security_group_rule_id": "sgr-020ea1a233cf2bf74",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_groups.aws_security_group.worker"
          ]
        }
      ]
    }
  ]
}